Separate test mode checks from the hot path and make config volatile